# aws-security-observability-suite

./: Jenkinsfile  README.md
backend/: pyproject.toml
backend/src/: main.py
ci-scripts/: deploy.sh
custom-docker-ssh-agent-with-deps/: Dockerfile  build-and-push.sh
diagram-engine/: architecture.py
infrastructure/: main.tf  outputs.tf  whoami-service-dev-key.pub
infrastructure/modules/account-security/: main.tf  outputs.tf
infrastructure/modules/alb/: main.tf
infrastructure/modules/app-compute/: main.tf  user_data.sh  variables.tf
infrastructure/modules/ecr/: main.tf  outputs.tf
infrastructure/modules/jenkins-agent-spot-compute/: main.tf  user_data.sh
infrastructure/modules/jenkins-compute/: main.tf  outputs.tf  variables.tf
infrastructure/modules/security/: main.tf  outputs.tf
monitoring/: docker-compose.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/provisioning/dashboards/: my-dashboard.json
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml  rules.yml
